Implement getSentBytesCount() in Cronet UrlRequest metrics

BUG=591434, 629194

Review-Url: https://codereview.chromium.org/2391423002
Cr-Commit-Position: refs/heads/master@{#423287}

Former-commit-id: 06763af4b30a9a7b8e1a190d9f2493f9467cab67